crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_worker__tests__Memory_trimmed_to_1_replay_4.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: "redact_component_digest(serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "Append": {
        "execution_id": "E_00000000000000000000000001",
        "version": 5,
        "req": {
          "created_at": "1970-01-01T00:00:00.800Z",
          "event": {
            "finished": {
              "retval": {
                "ok": {
                  "type": "u64",
                  "value": 55
                }
              },
              "http_client_traces": null
            }
          }
        }
      }
    }
  ]
}
